--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@justalk/pornhub-api": "^3.5.0",
     "@types/node": "^18.0.6",
+    "body-parser": "^1.20.2",
     "express": "^4.19.2"
   }
 }
