--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@justalk/pornhub-api": "^3.5.0",
     "@types/node": "^18.0.6",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "axios": "^1.6.8"
   }
 }
