--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^18.0.6",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "cors": "^2.8.5"
   }
 }
