--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "axios": "^1.6.8",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "fs": "^0.0.1-security"
   }
 }
